# infinite-codex

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml
scripts/: postinstall.mjs
src/infinite_memory/: chunking.py  cli.py  codex_sessions.py  config.py  db.py  embeddings.py  hooks.py  ingest.py  server.py
tests/: test_chunking.py  test_codex_sessions.py  test_incremental_db.py
