[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "infinite-memory"
version = "0.1.3"
description = "Vector memory MCP server for Codex session history"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Infinite Memory contributors" }]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.2",
  "numpy>=1.26",
  "pydantic>=2.7",
  "sqlite-vec>=0.1.6",
  "tomli-w>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
infinite = "infinite_memory.cli:main"
infinite-memory = "infinite_memory.server:main"
infinite-memory-ingest = "infinite_memory.cli:ingest_main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
